test: add and fix some tests